gap 60px for fixed menu

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/* For fixed menu this adds block 60 pixels thick */
+body::before{
+    display: block;
+    content: '';
+    height: 60px;
+}
+
 @media(min-width: 768px){
     .news-input{
         width: 50%;
